# BounceGame

./: .clang-format  .gitignore  Application.cpp  Application.hpp  CMakeLists.txt  README.md  main.cpp
include/: background.hpp  ball.hpp  game.hpp  gameConfig.hpp  gameSounds.hpp  paddle.hpp  random.hpp  stats.hpp
src/: background.cpp  ball.cpp  game.cpp  gameConfig.cpp  gameSounds.cpp  main.cpp  paddle.cpp  random.cpp  stats.cpp
zold/: CMakeLists.txt  main.cpp
